# germany-weather-map

./: .gitignore  .weather_cache  GEMINI.md  README.md  pyproject.toml  requirements.txt
api/: index.py
notes/: hardware_recommendations.md  vercel_deployment.md  vercel_setup.md
src/germany_weather_map/: display.py  main.py  map_utils.py  weather_data.py
tests/: test_display.py  test_integration.py  test_main.py  test_map_utils.py  test_weather_data.py
